--- a/css/styles-768max.css
+++ b/css/styles-768max.css
@@ -1,6 +1,14 @@
 @charset "UTF-8";
 @import url(styles-all.css);
 
+header > h1{
+   font-size: 9vw;
+}
+
 nav{
    display: none;
+}
+
+section#intro_banner{
+   height: 63vw;
 }
