--- a/css/styles-all.css
+++ b/css/styles-all.css
@@ -82,7 +82,6 @@ bbb8b2
 
 div#header{
    background-color: var(--clrHeaderBG);
-   background-image: url(../images/93ECF603-0F4C-48A8-951D-346BB2710C84.jpg);
    color: var(--clrHeaderF)
 }
 
@@ -105,7 +104,8 @@ nav > ul > li{
 section#intro_banner{
    background-color: var(--myblack);
    background-image: url(../images/photo1-500-blur-vignette.jpg);
-   background-size: cover;
+   background-size: 145vw;
+   background-repeat: no-repeat;
    background-position: left;
    background-attachment: fixed;
    box-shadow: inset 5vw 5vw 5vw rgba(0, 0, 0, 0.671);
