--- a/css/styles-all.css
+++ b/css/styles-all.css
@@ -104,10 +104,10 @@ nav > ul > li{
 section#intro_banner{
    background-color: var(--myblack);
    background-image: url(../images/photo1-500-blur-vignette.jpg);
-   background-size: 145vw;
+   /*background-size: cover;
    background-repeat: no-repeat;
    background-position: left;
-   background-attachment: fixed;
+   background-attachment: fixed;*/
    box-shadow: inset 5vw 5vw 5vw rgba(0, 0, 0, 0.671);
 }
 div#intro_banner_txt{
