--- a/css/styles-all.css
+++ b/css/styles-all.css
@@ -107,7 +107,7 @@ section#intro_banner{
    /*background-size: cover;*/
    background-repeat: no-repeat;
    background-position: left;
-   /*background-attachment: fixed;*/
+   background-attachment: fixed;
    box-shadow: inset 5vw 5vw 5vw rgba(0, 0, 0, 0.671);
 }
 div#intro_banner_txt{
