--- a/css/styles-768max.css
+++ b/css/styles-768max.css
@@ -1,12 +1,16 @@
 @charset "UTF-8";
 @import url(styles-all.css);
 
-header > h1{
-   font-size: 9vw;
+.mobile_none{
+   display: none;
 }
 
-nav{
-   display: none;
+.mobile_block{
+   display: block;
+}
+
+header > h1{
+   font-size: 9vw;
 }
 
 section#intro_banner{
