--- a/css/styles-all.css
+++ b/css/styles-all.css
@@ -79,7 +79,7 @@ bbb8b2
 .material-symbols-outlined {
   font-variation-settings:
   'FILL' 0,
-  'wght' 400,
+  'wght' 800,
   'GRAD' 0,
   'opsz' 48
 }
@@ -424,12 +424,54 @@ article#characteristics{
 
 #char_back{
    position: absolute;
-   bottom: 170px;
-   color: var(--myorange);
+   bottom: 140px;
+   left: 3px;
+   color: rgba(255, 123, 0, 0.288);
 } 
 
 #char_forward{
    position: absolute;
+   bottom: 140px;
+   right: 1px;
+   color: rgba(255, 123, 0, 0.288);
+}
+
+.char_button{
+   background-color: transparent;
+   height: 8em;
+   width: 3em;
+   border: none;
+   cursor: pointer;
+}
+
+#char_back:hover, #char_forward:hover{
+   color: var(--myred);
+   cursor: pointer;
+   transition-duration: .3s;
+}
+
+#char_back:hover{
+   transform: translate(-2px, 2px);
+}
+
+#char_forward:hover{
+   transform: translate(2px, 2px);
+}
+
+#slideMK_container{
+   position: absolute;
+   bottom: 5px;
+   width: 96.5vw;
+   align-items: center;
+   justify-content: space-evenly;
+}
+
+.slide_marker{
+   background-color: rgba(128, 128, 128, 0.226);
+   height: 3px;
+   width: 32vw;
+   max-width: 150px;
+   border-radius: 5px;
 }
 
 p#char_intro{
@@ -440,7 +482,7 @@ p#char_intro{
 }
 
 section#individualism{
-   background-color: white;
+   background-color: black;
    background-image: url(../images/individualism-edited-500.jpg);
    background-size: cover;
 
@@ -468,7 +510,7 @@ div#idv_txt_container > p{
 }
 
 section#diversion_attention{
-   background-color: white;
+   background-color: black;
    background-image: url(../images/diversion_attention-edited-500.jpg);
    background-size: cover;
    background-position: center center;
@@ -497,7 +539,7 @@ div#datt_txt_container > p{
 }
 
 section#perfectionism{
-   background-color: white;
+   background-color: black;
    background-image: url(../images/perfectionism-edited-500.jpg);
    background-size: cover;
    background-position: right;
