--- a/css/styles-1200min.css
+++ b/css/styles-1200min.css
@@ -1,2 +1,15 @@
 @charset "UTF-8";
 @import url(styles-all.css);
+@import url(styles-992min.css);
+
+p#presentment_intro{
+   font-size: 3.24em;
+}
+
+p#cutting_edge{
+   font-size: 2.1em;  
+}
+
+div#big_big > p{
+   font-size: 2.2em;
+}
