--- a/css/styles-992min.css
+++ b/css/styles-992min.css
@@ -102,3 +102,7 @@ div#emote:hover{
    transform: translate(0px, -10px);
    transition: 2s ease;
 }
+
+div#seriousness > p{
+   font-size: 2.5em;
+}
